[package]
name = "ht16k33-lite"
edition = "2018"
version = "0.1.0"
authors = ["Nils Eriksson <nils.edvin.eriksson@gmail.com>"]
license = "MIT"
description = "Driver for the Holtek HT16K33 'RAM Mapping 16*8 LED Controller Driver with keyscan'"
repository = "https://github.com/nilscript/ht16k33-lite"
keywords = ["driver", "led", "ht16k33", "no-std", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
ambassador = "0.3"
embedded-hal = "0.2"
num-traits =  { version = "0.2", default-features = false }
num-derive = { version = "0.3", default-features = false }
