[package]
name = "ht16k33-lite"
edition = "2018"
version = "0.0.1"
authors = ["Nils Eriksson <nils.edvin.eriksson@gmail.com>"]
license = "MIT"
description = "Driver for the Holtek HT16K33 'RAM Mapping 16*8 LED Controller Driver with keyscan'"
repository = "https://github.com/nilscript/ht16k33-lite"
keywords = ["driver", "led", "ht16k33", "no-std", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
embedded-hal = "0.2"
enum_index = "0.2"
enum_index_derive = "0.2"